frontend/Kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: snaveenkpn/restaurant-backend:1
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: restaurant
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
