frontend/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo
  namespace: restaurant
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: adf2479f8ccd345bab71a60579c127eb-1366346907.ap-south-1.elb.amazonaws.com
      http:
        paths:
          # Path for frontend
          - path: / # Matches all URLs starting with /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
          
          # Path for backend
          - path: /api/restaurants # Matches all URLs starting with /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4000
